2021-10-11 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/f8/gen.c,
	  src/f8/main.c,
	  src/f8/alloc2.cc:
	  Improve codegen for experimental f8 port.

2021-10-11 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/f8/gen.c.
	  src/f8/alloc2.cc:
	  Improve codegen for experimental f8 port.

2021-10-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Minor code cleanup.
	* device/lib/_strchr.c:
	  Fix strchr handling of c outside of char range.

2021-10-11 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/f8/gen.c:
	  Improve codegen for experimental f8 port.

2021-10-10 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* device/lib/f8,
	  configure,
	  configure.ac,
	  device/lib/Makefile.in:
	  Library infrastructure for experimental f8 port.
	* src/f8/gen.c:
	  Improve codegen for experimental f8 port.

2021-10-07 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/f8/gen.c,
	  src/f8/main.c,
	  device/include/sdcc-lib.h,
	  device/include/stdarg.h:
	  Codegen for experimental f8 port.

2021-10-06 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/f8/gen.c,
	  src/f8/main.c,
	  src/f8/ralloc2.cc:
	  Codegen infrastructure for experimental f8 port.

2021-10-05 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/f8,
	  configure,
	  configure.ac,
	  src/SDCCmain.c,
	  src/clean.mk,
	  src/port.h:
	  Infrastructure for experimental f8 port.

2021-09-28 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/z80/__mulsint2slong.s:
	  Improve int x int -> long multiplication for z80.

2021-09-27 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/z80/__mulsint2slong.s:
	  Improve int x int -> long multiplication for z80.

2021-09-26 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/z80/__mulsint2slong.s,
	  src/z80/main.c,
	  device/lib/z80/Makefile.in:
	  int x int -> long multiplication support routine for z80.
